# ArkhamTCG

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
arkham_tcg/: ArkhamTCG.gdextension  icon.svg.import  main.tscn  project.godot
arkham_tcg_rust/: Cargo.toml
arkham_tcg_rust/ArkhamTCG.bckp/: Cargo.toml  README.md
arkham_tcg_rust/ArkhamTCG.bckp/assets/cards/encounters/: apot.json  bad.json  blbe.json  blob.json  bota.json  btb.json  core.json  cotr.json  dca.json  dsm.json  eoec.json  fgg.json  guardians.json  har.json  hhg.json  hotel.json  hoth.json  iotv.json  itd.json  jac.json  lif.json  litas.json  lod.json  mtt.json  promo.json  ptc.json  rcore.json  rtptc.json  rttcu.json  rttfa.json  sfk.json  ste.json  tcu.json  tde.json  tdoy.json  tfa.json  tftbw.json  tic.json  tof.json  tsh.json  (+9 more)
arkham_tcg_rust/ArkhamTCG.bckp/assets/cards/investigators/: investigators.json
arkham_tcg_rust/ArkhamTCG.bckp/src/: main.rs
arkham_tcg_rust/src/: lib.rs
assets/cards/encounters/: aon.json  bbt.json  bob.json  bsr.json  coh.json  def.json  dre.json  dwl.json  eoep.json  eotp.json  fof.json  hote.json  icc.json  itm.json  lol.json  nat.json  otr.json  pnr.json  rod.json  rtdwl.json  rtnotz.json  rtr.json  sha.json  tbb.json  tcoa.json  tdg.json  tdor.json  tece.json  tmm.json  tpm.json  wda.json  win.json  woc.json
src/: main.rs  main_backup.rs
src/assets/: player_cards.json
